--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get update \
     && apt-get install -y apt-transport-https \
     && apt-get update \
     && apt-get install -y dotnet-sdk-3.1 \
+    && apt-get install -y dotnet-sdk-5.0 \
     # Clean up
     && apt-get autoremove -y \
     && apt-get clean -y \
