--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b -v",
     "clean": "tsc -b --clean",
-    "package": "tsc -b -v && tfx extension create --manifest-globs vss-extension.json"
+    "package": "tsc -b -v && tfx extension create --manifest-globs vss-extension.json",
+    "embedme": "embedme ./README.md"
   },
   "repository": {
     "type": "git",
